- fixed bug #2520183 : wrong size in snprintf call
- fixed bug with ID3v1 and '@N' (was 1,3,5,... instead of 1,2,3,...)
- fixed time split with '0.0' was infinite looping
- fixed empty output format '' seg fault
- added options @m,@M,@s,@S,@H,@h + no @h or @H in output filenames if hundreths are 0
- added --with-(mad|id3)(-libraries|-includes)?, --disable-[mad|id3]test configure options

libmp3splt version 0.5.4
-------------------------------------------------------------

- fixed all tags/filenames "unicode" encoding issues on windows
- the default behaviour of the tags on the split files has changed :
by default, we set the tags version of the file to split in the
split files (for example if the file for split has ID3 version X, the
tags in the split files will be ID3vX)
- the tags in the output files can be changed with the
SPLT_OPT_FORCE_TAGS_VERSION option
- fixed issue when the input file is erased if the output is the same as the original file
- fixed small track issue in tags

libmp3splt version 0.5.3
-------------------------------------------------------------

- added ID3v2 support when compiling with 'libid3tag' support
- added '@nX' to '-o' option to specify the number of digits (X) in the
output track identifier number
- added the '@N' variable when using the '-g' option for auto incrementing
the track number in the tags
- fixed bug #2398397 : 'license version broken in README'
- fixed the zeroes not being added before the number when using @n
- fixed a lot of ugly codings and compiler warnings
- fixed problem with configure yielding error when libid3tag not found
- fixed libtool incompatibility issue (libtool: link: cannot find the
library `../libltdl/libltdlc.la'), bug #2144760
- updated to check for illegal characters in output filenames

libmp3splt version 0.5.2
-------------------------------------------------------------
- fixed bug crashing the applications on the silence split when
no 'get_silence_level' function defined
